--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ ApiCsv/obj/
 ApiCsv/bin/
 ApiCsv/.vs/ApiCsv/FileContentIndex/1af67b53-1ce3-44c2-8c5b-adf9a20759f3.vsidx
 ApiCsv/.vs/
+ApiCliente/ApiCliente/.vs/
+ApiCliente/ApiCliente/bin/
+ApiCliente/ApiCliente/obj/
