--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ ApiCsv/.vs/
 ApiCliente/ApiCliente/.vs/
 ApiCliente/ApiCliente/bin/
 ApiCliente/ApiCliente/obj/
+ApiFilmes/ApiFilmes/obj/
+ApiFilmes/ApiFilmes/bin/Debug/net8.0/pt-BR/
+ApiFilmes/ApiFilmes/bin/Debug/net8.0/ru/
+ApiFilmes/ApiFilmes/bin/Debug/
+ApiFilmes/ApiFilmes/.vs/ApiFilmes/CopilotIndices/17.13.433.20974/
+ApiFilmes/ApiFilmes/.vs/ApiFilmes/FileContentIndex/
+ApiFilmes/ApiFilmes/.vs/ApiFilmes/copilot-chat/
+ApiFilmes/ApiFilmes/.vs/ProjectEvaluation/
+ApiFilmes/ApiFilmes/.vs/ApiFilmes/
